@@ -15,4 +15,9 @@
         <field name="code">reached_end_date</field>
         <field name="status">terminated</field>
     </record>
+    <record model="contract.sub_status" id="sub_status_terminated">
+        <field name="name">Terminated</field>
+        <field name="code">terminated</field>
+        <field name="status">terminated</field>
+    </record>
 </data>
