@@ -48,6 +48,7 @@ Get Models::
     >>> Product = Model.get('offered.product')
     >>> Sequence = Model.get('ir.sequence')
     >>> SequenceType = Model.get('ir.sequence.type')
+    >>> SubStatus = Model.get('contract.sub_status')
     >>> User = Model.get('res.user')
 
 Constants::
@@ -199,6 +200,10 @@ Create Product::
     >>> product.coverages.append(coverage)
     >>> product.save()
 
+Create SubStatus::
+
+    >>> termination_status, = SubStatus.find([('code', '=', 'terminated')])
+
 Create Change Start Date Endorsement::
 
     >>> remove_option_part = EndorsementPart()
@@ -260,10 +265,14 @@ New Endorsement::
     >>> new_endorsement.execute('start_endorsement')
     >>> my_option = new_endorsement.form.options[0].option
     >>> new_endorsement.form.options[0].to_remove = True
+    >>> new_endorsement.form.options[0].sub_status = termination_status
     >>> new_endorsement.execute('remove_option_next')
     >>> new_endorsement.execute('apply_endorsement')
     >>> contract.save()
-    >>> contract.covered_elements[0].options[0].end_date == endorsement_effective_date
+    >>> contract.covered_elements[0].options[1].end_date == endorsement_effective_date
+    True
+    >>> contract.covered_elements[0].options[1].sub_status == \
+    ...     termination_status
     True
     >>> good_endorsement, = Endorsement.find([
     ...         ('contracts', '=', contract.id)])
