@@ -1,0 +1,20 @@
+<?xml version="1.0"?>
+<form string="Option">
+    <label name="to_remove"/>
+    <field name="to_remove"/>
+    <label name="option"/>
+    <field name="option"/>
+    <label name="covered_element"/>
+    <field name="covered_element"/>
+    <label name="start_date"/>
+    <field name="start_date"/>
+    <label name="end_date"/>
+    <field name="end_date"/>
+    <label name="sub_status"/>
+    <field name="sub_status" widget="selection"/>
+    <label name="contract"/>
+    <field name="contract"/>
+    <field name="covered_element_endorsement" invisible="1"/>
+    <field name="option_endorsement" invisible="1"/>
+    <field name="covered_element_option_endorsement" invisible="1" colspan="2"/>
+</form>
