@@ -25,6 +25,11 @@
             <field name="type">tree</field>
             <field name="name">remove_option_selector_list</field>
         </record>
+        <record model="ir.ui.view" id="remove_option_selector_view_form">
+            <field name="model">contract.covered_element.option.remove.option_selector</field>
+            <field name="type">form</field>
+            <field name="name">remove_option_selector_form</field>
+        </record>
         <!-- ################################# -->
         <!-- # New Option On Covered Element # -->
         <!-- ################################# -->
