@@ -1,3 +1,5 @@
+* Add sub_status to option
+
 Version 1.4 - 2015-05-29
 * Add wizard to stop (terminate / void) contracts
 * Add relate to event logs from contract if the module is installed
